Remove wp_editor and use wp.editor.initialize only, remove code to prevent icons breaking, use empty instead isset

--- a/assets/src/sass/admin.scss
+++ b/assets/src/sass/admin.scss
@@ -14,3 +14,10 @@ div.menu-item-select-feature-list-wrapper {
 		justify-content: space-between;
 	}
 }
+
+textarea.menu-item-html-editor {
+	width: 100%;
+	border: none;
+	height: 200px;
+	box-shadow: none;
+}
