Use page-title-action class for select image button

--- a/assets/src/sass/admin.scss
+++ b/assets/src/sass/admin.scss
@@ -6,6 +6,10 @@ p.feature-list-label-p {
 	display: none;
 }
 
+#menu-to-edit .custom-field-select-image {
+	margin-left: 0;
+}
+
 div.menu-item-select-feature-list-wrapper {
 	margin-bottom: 0.7em;
 
