--- a/assets/src/sass/main.scss
+++ b/assets/src/sass/main.scss
@@ -1,6 +1,6 @@
 $captionFontSize: 0.9em;
 
-.rt-wp-menu-custom-fields-wrapper {
+.rt-wp-mega-menu-wrapper {
 	width: 100%;
 	line-height: 1.3;
 
@@ -9,21 +9,21 @@ $captionFontSize: 0.9em;
 		padding: 0;
 	}
 
-	.rt-wp-menu-custom-fields-image-wrapper {
+	.rt-wp-mega-menu-image-wrapper {
 
-		.rt-wp-menu-custom-fields-image {
+		.rt-wp-mega-menu-image {
 			max-height: 200px;
 			display: block;   
 		}
 
-		.rt-wp-menu-custom-fields-image-caption {
+		.rt-wp-mega-menu-image-caption {
 			display: block;
 			font-size: $captionFontSize;
 			margin-top: 1em;
 		}
 	}
 
-	.rt-wp-menu-custom-fields-custom-text {
+	.rt-wp-mega-menu-custom-text {
 		display: block;
 		font-size: $captionFontSize;
 		padding-top: 1em;
@@ -32,7 +32,7 @@ $captionFontSize: 0.9em;
 	}
 }
 
-.rt-wp-menu-custom-fields-shortcode-wrapper .rt-wp-menu-custom-fields-shortcode {
+.rt-wp-mega-menu-shortcode-wrapper .rt-wp-mega-menu-shortcode {
 
 	/* stylelint-disable declaration-no-important */
 	.wp-video {
@@ -46,7 +46,7 @@ $captionFontSize: 0.9em;
 	/* stylelint-enable declaration-no-important */
 }
 
-.rt-wp-menu-custom-fields-shortcode-wrapper .rt-wp-menu-custom-fields-shortcode-caption {
+.rt-wp-mega-menu-shortcode-wrapper .rt-wp-mega-menu-shortcode-caption {
 	display: block;
 	font-size: $captionFontSize;
 	margin-top: 1em;
