Add css which fixes long links when added in custom HTML

--- a/assets/src/sass/main.scss
+++ b/assets/src/sass/main.scss
@@ -47,4 +47,9 @@
 	width: auto;
 	word-break: break-all;
 	padding-right: 0.5em;
+	word-wrap: break-word;
+}
+
+.sub-menu .rt-wp-menu-custom-fields-custom-html a {
+	word-break: break-all;
 }
