--- a/assets/src/sass/main.scss
+++ b/assets/src/sass/main.scss
@@ -49,6 +49,13 @@
 	padding-right: 0.5em;
 }
 
-.sub-menu .rt-wp-menu-custom-fields-custom-html a {
-	word-break: break-all;
+.sub-menu .rt-wp-menu-custom-fields-custom-html {
+	a {
+		padding-top: 0.5em;
+		word-break: break-all;
+	}
+	& > * {
+		padding: 0;
+		padding-bottom: 0.5em;
+	}
 }
