Add unset css when position is absolute for extra precaution

--- a/assets/src/sass/main.scss
+++ b/assets/src/sass/main.scss
@@ -105,6 +105,8 @@ ul:not(.sub-menu) > li.menu-item-has-children > ul.sub-menu > li {
 				transform: rotate(-90deg);
 				top: -0.9412em;
 				right: 0.9412em;
+				left: unset;
+				bottom: unset;
 			}
 		}
 
